# WordFrequencyCounter

./: CMakeLists.txt  README.md  cross-build.sh
include/: timer.h
src/: freq.cpp
